tests/negative/abilities/with_non_context_alias.orng
// with_non_context_alias.orng:7:17: error: expected a context, got the type `A`
//         f[Int, A](4)
//                ^
// 
fn main() -> Int {
    with A(2) {
        f[Int, A](4)
    }
}

fn f[T, abilityC](t: T) -> T with C {
    t
}

type A = Int